--- a/pywr_schema/Cargo.toml
+++ b/pywr_schema/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 time = { version = "0.3.14", features = ["serde", "serde-well-known", "serde-human-readable"] }
 thiserror = "1.0.44"
+pywr-schema-macros = { path = "../pywr-schema-macros" }
