--- a/pywr_schema/Cargo.toml
+++ b/pywr_schema/Cargo.toml
@@ -12,8 +12,8 @@ path = "src/lib.rs"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-time = { version = "0.3.36", features = ["serde", "serde-well-known", "serde-human-readable"] }
 thiserror = "1.0.59"
 pywr-schema-macros = { path = "../pywr-schema-macros" }
 strum = "0.26"
 strum_macros = "0.26"
+chrono = { version = "0.4.34", features = ["serde"] }
