chore: Fix Release Please config.

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -5,6 +5,10 @@
     "pywr-v1-validator": "0.13.1"
   },
   "plugins": [
-    "cargo-workspace"
-  ]
+    {
+      "type": "cargo-workspace",
+      "updatePeerDependencies": true
+    }
+  ],
+  "release-type": "rust"
 }
