chore: Fix Release Please config (6).

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,10 +5,7 @@
     "pywr-v1-validator": {}
   },
   "plugins": [
-    {
-      "type": "cargo-workspace",
-      "updatePeerDependencies": true
-    }
+    "cargo-workspace"
   ],
   "release-type": "rust"
 }
