--- a/pywr-v1-schema/Cargo.toml
+++ b/pywr-v1-schema/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0.63"
-pywr-v1-schema-macros = { path = "../pywr-v1-schema-macros" }
+pywr-v1-schema-macros = { path = "../pywr-v1-schema-macros", version = "0.13.1" }
 strum = "0.26"
 strum_macros = "0.26"
 chrono = { version = "0.4.34", features = ["serde"] }
