--- a/pywr-v1-schema-macros/Cargo.toml
+++ b/pywr-v1-schema-macros/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "pywr-v1-schema-macros"
+description = "Procedural macros for pywr-v1-schema"
 authors.workspace = true
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
