--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
 
 [workspace.package]
 authors = ["James Tomlinson <tomo.bbe@gmail.com>"]
-version = "0.13.1"
+version = "0.14.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/pywr/pywr-schema"
