--- a/pywr-v1-schema/Cargo.toml
+++ b/pywr-v1-schema/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "pywr-v1-schema"
+description = "Pywr v1.x schema for validation and (de)serialization of model JSON files."
 authors.workspace = true
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 
 [lib]
 path = "src/lib.rs"
@@ -13,7 +15,7 @@ path = "src/lib.rs"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0.63"
-pywr-v1-schema-macros = { path = "../pywr-v1-schema-macros", version = "0.13.1" }
+pywr-v1-schema-macros = { path = "../pywr-v1-schema-macros", version = "0.14" }
 strum = "0.26"
 strum_macros = "0.26"
 chrono = { version = "0.4.34", features = ["serde"] }
